[package]
name = "vgblog"
version = "0.1.0"
edition = "2021"

[lib]
doc = false

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"